test: documentation laraswaager
