# storage/api-docs/api-docs.json
@@ -23,7 +23,7 @@
         "multipart/form-data"
     ],
     "paths": {
-        "/api/temoignages/1": {
+        "/api/temoignages": {
             "get": {
                 "summary": "index",
                 "description": "",
@@ -1133,16 +1133,12 @@
                                 "type": "object",
                                 "properties": {
                                     "permissions": {
-                                        "type": "string",
-                                        "format": "binary"
+                                        "type": "string"
                                     }
                                 }
                             },
                             "example": {
-                                "permissions": [
-                                    "edit articles",
-                                    "delete articles"
-                                ]
+                                "permissions": "edit articles"
                             }
                         }
                     }
@@ -1261,9 +1257,15 @@
                         "multipart/form-data": {
                             "schema": {
                                 "type": "object",
-                                "properties": {}
+                                "properties": {
+                                    "role": {
+                                        "type": "string"
+                                    }
+                                }
                             },
-                            "example": {}
+                            "example": {
+                                "role": "admin"
+                            }
                         }
                     }
                 }
@@ -1713,12 +1715,10 @@
                                         "type": "integer"
                                     },
                                     "created_by": {
-                                        "type": "string",
-                                        "format": "binary"
+                                        "type": "integer"
                                     },
                                     "modified_by": {
-                                        "type": "string",
-                                        "format": "binary"
+                                        "type": "integer"
                                     },
                                     "created_at": {
                                         "type": "string"
@@ -1735,8 +1735,8 @@
                                 "nombre_de_vue": 0,
                                 "dateCreation": "2024-08-12",
                                 "domaine_id": 1,
-                                "created_by": null,
-                                "modified_by": null,
+                                "created_by": 1,
+                                "modified_by": 1,
                                 "created_at": "2024-08-12T18:29:22.000000Z",
                                 "updated_at": "2024-08-12T18:29:22.000000Z"
                             }
